changed font to menlo, aligned names, fixed title height

--- a/style.css
+++ b/style.css
@@ -15,18 +15,18 @@
 }
 
 .stonePalace{
-
+height: 196px;
 }
 
 .exhibition{
-  font-family: Arial;
+  font-family: Menlo;
   text-align: center;
   font-size: 25px;
 
 
 }
 .secondText{
-  font-family: Arial;
+  font-family: Menlo;
   text-align: center;
   padding-top: -10px;
   padding-right: 86px;
@@ -52,6 +52,10 @@
   font-weight: bold;
 }
 
+.datesNTime {
+  font-style: normal;
+}
+
 .lildude{
   height: 333px;
   margin-right: -961px;
@@ -64,7 +68,14 @@
 #credits {
   position: relative;
     margin-right: -970px;
-    padding-left: 615px;
+    padding-left: 540px;
     font-family: sans-serif;
     font-size: 11px;
+}
+
+ul{
+   padding-left: 249px;
+   text-align: left;
+   font-size: 20px;
+   line-height: normal;
 }
